finalizado funções js e refatorada função que altera o header ao scroll

--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 </head>
 <body>
     <header>
-        <nav class="margem">
+        <nav class="margem" id="nav">
             <div class="logo-header">
                 <img src="./img/logolivia-pequeno.png" alt="Logotipo">
             </div> 
-            <ul>
-                <li><a href="#inicio" id="menu-inicio">Início</a></li>
-                <li><a href="#servicos" id="menu-servicos">Serviços</a></li>
-                <li><a href="#sobre" id="menu-sobre">Sobre</a></li>
-                <li><a href="#contato" id="menu-contato">Contato</a></li>
+            <ul id="menu-list">
+                <li><a href="#inicio">Início</a></li>
+                <li><a href="#servicos">Serviços</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
             <a href="./" class="botao-nav">Agendar reunião</a>
-            <button><img src="./img/menu-mobile.svg" alt="" class="menu-mobile"></button>   
+            <button id="btn-mobile"><img src="./img/menu-mobile.svg" class="menu-mobile"></button>   
         </nav>
     </header>
 
